Tikz picture update
Tikz picture added to Pythagoras theorem along with a reference. Readme bib tex updated for the use of bibtool.

--- a/Bibliography/libraryIn.bib
+++ b/Bibliography/libraryIn.bib
@@ -17,3 +17,14 @@ BibTeX export options can be customized via Options -> BibTeX in Mendeley Deskto
   address       = {Paris},
   year          = {1820}
 }
+
+@article{veljan20002500,
+  title={The 2500-year-old Pythagorean theorem},
+  author={Veljan, Darko},
+  journal={Mathematics Magazine},
+  volume={73},
+  number={4},
+  pages={259--272},
+  year={2000},
+  publisher={Taylor \& Francis}
+}
