--- a/Bibliography/libraryOut.bib
+++ b/Bibliography/libraryOut.bib
@@ -1,4 +1,14 @@
 
+@Article{Veljan2000,
+  author        = {Veljan, Darko},
+  title         = {The 2500-year-old Pythagorean theorem},
+  journal       = {Mathematics Magazine},
+  volume        = {73},
+  pages         = {259--272},
+  publisher     = {Taylor \& Francis},
+  year          = {2000}
+}
+
 @Book{Lamport1985,
   author        = {Leslie Lamport},
   title         = {{\LaTeX\ - A Document Preparation System - User's Guide and Reference Manual}},
