--- a/Thesis.tex
+++ b/Thesis.tex
@@ -22,8 +22,8 @@
 \include{Chapters/Chapter1/chapter1} % Introduction
 \include{Chapters/Chapter2/chapter2} % Chapter 2
 \include{Chapters/Chapter3/chapter3} % Chapter 3
-%\include{Chapters/Chapter4/chapter4} % To include chapter 4 create a Tex file
-% The thesis can be compiled with only a subsection of the chapters
+%\include{Chapters/Chapter4/chapter4} % To include Chapter 4 create a new TeX file 
+% The thesis can be compiled with only a subsection of the chapters by commenting out some of the chapters
 
 \appendix
 \include{Appendices/appendixA} % Appendix 1
